fix: margin gap for administration sidebar on mobile

--- a/apps/dashboard/src/styles/dashboard.scss
+++ b/apps/dashboard/src/styles/dashboard.scss
@@ -666,6 +666,7 @@ pre.code {
 
   .admin-sidebar-menu {
     height: calc(100%);
+    margin: 0 !important;
   }
 
   .sidebar-menu-button.is-mobile-active {
